# pccl

./: .clang-format  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  packer.py  pyproject.toml  setup.py
csrc/: communicator.cc  config.cc  endpoint.cc  engine.cc  general_component.cc  pybind.cc  python.cc  python_api.cc  registered_memory.cc
csrc/base/: device.cc  registry.cc
csrc/cluster/: daemon.cc  manager.cc
csrc/common/: environ.cc  hash.cc  logging.cc  serialize.cc  time.cc
csrc/configs/: verbs_config.cc
csrc/kernel_jit/: compiler.cc
csrc/runtime/: topo.cc
csrc/utils/: allocator.cc  defs.cc  logging.cc  profile.cc
examples/: basic_usage.py  simple_allreduce.cc
include/: common.h  communicator.h  config.h  connection.h  device.h  endpoint.h  engine.h  executor.h  general_component.h  operator.h  opt.h  proxy.h  registered_memory.h  runtime.h  types.h  utils.h
include/base/: chunk.h  device.h  executor.h  operator.h  registry.h
include/cluster/: daemon.h  event.h  manager.h
include/common/: environ.h  hash.h  time.h  (+2 more)
pccl/: __init__.py  __init__.pyi  api.py  design.md  envs.py  hw_topo.py  logging.py  simulator.py
src/: config.cc  device.cc  python.cc  runtime.cc  utils.cc
tests/: coverage_report.py  hash_perf  hash_perf.cc  run_all_tests.py  test_api.py  test_collective_ir.py  test_low_ir.py  test_pccl.py  test_pipeline.py  test_primitive.py  test_primitive_ir_transformer.py  test_ring_allreduce.py  test_ringz_allreduce_nvlink.py  test_runtime.py  test_runtime_multiprocess.py  test_transforms.py
(+236 files in other folders)
